nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: nexus
